# orynq-sdk

./: .gitignore  .gitmodules  .npmrc  README.md  install-mcp.sh  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.changeset/: add-orynq-mcp.md  midnight-prover.md  orynq-openclaw-recorder.md  solo-dev-dx-tightening.md  storage-adapters.md
.claude/: settings.local.json
.claude/hooks/: poi-pop-hook.mjs
.github/workflows/: anchor-worker.yml  blob-gateway.yml  ci.yml  claude-security-review.yml  publish-github-packages.yml  release.yml
docs/: aws-kms-signer-implementation.md  backend-implementation-readme-gateway-fix.md  cicd-workflows-implementation.md  cli-implementation-summary.md  client-implementation-summary.md  evm-payers-implementation-complete.md  gateway-implementation-summary.md  payer-cardano-cip30-implementation.md  payer-cardano-cip30-meshjs-implementation.md  payer-cardano-node-backend-implementation.md  payer-cardano-node-implementation.md  payer-evm-direct-implementation.md  payer-evm-x402-implementation.md  phase5-npm-publishing-rename-summary.md  poi-sdk-core-implementation.md  python-sdk-implementation-summary.md  server-middleware-implementation.md  task-33-l2-tx-builder-implementation.md  task-34-l1-settlement-implementation.md  task-35-midnight-prover-implementation.md  task-36-hash-chain-prover-implementation.md  task-37-policy-selective-disclosure-implementation.md  task-38-midnight-proof-publication.md  transport-flux-implementation.md  transport-x402-implementation.md  verifiers-implementation-summary.md  x402-chain-binding-enforcement.md  x402-version-alignment-summary.md
docs/architecture/: poi-v2-plan.md
fixtures/: README.md  hash-vectors.json
python/: README.md  pyproject.toml
python/orynq_sdk/: __init__.py  budget.py  cli.py  client.py  invoice_cache.py  payer.py  quickstart.py  stream.py  trace.py  transport_flux.py  types.py
python/orynq_sdk/signers/: __init__.py  kms.py  memory.py
python/poi_sdk/: __init__.py  budget.py  client.py  invoice_cache.py  payer.py  stream.py  transport_flux.py  types.py
python/poi_sdk/signers/: __init__.py  kms.py  memory.py
python/tests/: __init__.py  conftest.py  test_budget.py  test_canonical_json.py  test_client.py  test_invoice_cache.py  test_quickstart.py  test_trace.py  test_transport_flux.py  test_types.py
scripts/: generate-hash-vectors.ts  install-openclaw.ps1  install-openclaw.sh  mainnet_anchor_trace.ts  pop_explain.ts  verify-hash-vectors.py  verify-hash-vectors.ts
tests/: tsconfig.json
(+150 files in other folders)
