[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poi-sdk"
version = "0.1.0"
description = "Dual-protocol commerce layer for Cardano/EVM payments"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cardano = ["pycardano>=0.10.0"]
aws = ["boto3>=1.34.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["poi_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.hatch.build.targets.wheel]
packages = ["poi_sdk"]
